syntax = "proto3";

package carauction.carauction;

option go_package = "car-auction/x/carauction/types";

message Bid {
  string creator = 1;
  uint64 id = 2;
  uint64 auctionID = 3;
  string bidPrice = 4;
}
